@@ -4,7 +4,7 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>com.aws.greengrass</groupId>
     <artifactId>nucleus</artifactId>
-    <version>2.3.0-SNAPSHOT</version>
+    <version>2.6.0-SNAPSHOT</version>
     <packaging>jar</packaging>
 
     <licenses>
@@ -28,7 +28,7 @@
             <dependency>
                 <groupId>software.amazon.awssdk</groupId>
                 <artifactId>bom</artifactId>
-                <version>2.15.47</version>
+                <version>2.17.60</version>
                 <type>pom</type>
                 <scope>import</scope>
             </dependency>
@@ -38,26 +38,26 @@
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-api</artifactId>
-            <version>5.7.0</version>
+            <version>5.8.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.mockito</groupId>
             <artifactId>mockito-junit-jupiter</artifactId>
-            <version>3.5.13</version>
+            <version>4.0.0</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-engine</artifactId>
-            <version>5.7.0</version>
+            <version>5.8.1</version>
             <scope>test</scope>
         </dependency>
         <!-- https://mvnrepository.com/artifact/org.junit.jupiter/junit-jupiter-params -->
         <dependency>
             <groupId>org.junit.jupiter</groupId>
             <artifactId>junit-jupiter-params</artifactId>
-            <version>5.7.0</version>
+            <version>5.8.1</version>
             <scope>test</scope>
         </dependency>
         <dependency>
@@ -74,12 +74,12 @@
         <dependency>
             <groupId>com.fasterxml.jackson.core</groupId>
             <artifactId>jackson-databind</artifactId>
-            <version>2.11.3</version>
+            <version>2.13.0</version>
         </dependency>
         <dependency>
             <groupId>com.fasterxml.jackson.dataformat</groupId>
             <artifactId>jackson-dataformat-yaml</artifactId>
-            <version>2.11.3</version>
+            <version>2.13.0</version>
         </dependency>
         <dependency>
             <groupId>javax.inject</groupId>
@@ -89,23 +89,23 @@
         <dependency>
             <groupId>com.aws.greengrass</groupId>
             <artifactId>component-common</artifactId>
-            <version>2.0.0-SNAPSHOT</version>
+            <version>2.1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>com.aws.greengrass</groupId>
             <artifactId>logging</artifactId>
-            <version>2.1.0-SNAPSHOT</version>
+            <version>2.1.1-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
-            <version>1.18.10</version>
+            <version>1.18.22</version>
             <scope>provided</scope>
         </dependency>
         <dependency>
             <groupId>com.github.spotbugs</groupId>
             <artifactId>spotbugs-annotations</artifactId>
-            <version>4.0.1</version>
+            <version>4.4.2</version>
         </dependency>
         <dependency>
             <groupId>com.vdurmont</groupId>
@@ -196,7 +196,7 @@
         <dependency>
              <groupId>com.github.oshi</groupId>
              <artifactId>oshi-core</artifactId>
-             <version>5.2.3</version>
+             <version>5.8.2</version>
         </dependency>
 
         <!-- zeroturnaround brings in an older version jna which tries to load msvcr100.dll. msvcr100.dll is not shipped
@@ -206,13 +206,13 @@
         <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna</artifactId>
-            <version>5.7.0</version>
+            <version>5.9.0</version>
         </dependency>
         <!-- jna-platform adds support for calling Windows system DLLs -->
         <dependency>
             <groupId>net.java.dev.jna</groupId>
             <artifactId>jna-platform</artifactId>
-            <version>5.7.0</version>
+            <version>5.9.0</version>
         </dependency>
 
         <dependency>
@@ -224,12 +224,12 @@
         <dependency>
             <groupId>software.amazon.awssdk.iotdevicesdk</groupId>
             <artifactId>aws-iot-device-sdk</artifactId>
-            <version>1.0.0-HIB-SNAPSHOT</version>
+            <version>1.5.3-WINDOWS-SNAPSHOT</version>
         </dependency>
         <dependency>
             <groupId>org.bouncycastle</groupId>
             <artifactId>bcpkix-jdk15on</artifactId>
-            <version>1.66</version>
+            <version>1.69</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
@@ -282,7 +282,7 @@
                         <dependency>
                             <groupId>${project.groupId}</groupId>
                             <artifactId>${project.artifactId}</artifactId>
-                            <version>${project.version}</version>
+                            <version>${lastVersion}</version>
                             <type>${project.packaging}</type>
                         </dependency>
                     </oldVersion>
@@ -504,6 +504,7 @@
                     <excludes>
                         <exclude>**/*Exception*</exclude>
                         <exclude>**/awssdk/**</exclude>
+                        <exclude>**/vendored/**</exclude>
                     </excludes>
                     <propertyName>surefire.argLine</propertyName>
                     <skip>${skipTests}</skip>
@@ -576,7 +577,7 @@
                                         <limit>
                                             <counter>BRANCH</counter>
                                             <value>COVEREDRATIO</value>
-                                            <minimum>0.59</minimum>
+                                            <minimum>0.58</minimum>
                                         </limit>
                                     </limits>
                                 </rule>
@@ -628,6 +629,9 @@
                                 <transformer
                                         implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
                                     <mainClass>com.aws.greengrass.easysetup.GreengrassSetup</mainClass>
+                                    <manifestEntries>
+                                        <Add-Opens>java.base/java.io</Add-Opens>
+                                    </manifestEntries>
                                 </transformer>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheLicenseResourceTransformer"/>
                                 <transformer implementation="org.apache.maven.plugins.shade.resource.ApacheNoticeResourceTransformer">
@@ -675,6 +679,18 @@
                                     <artifact>software.amazon.awssdk.crt:aws-crt:jar:*</artifact>
                                     <excludes>
                                         <exclude>*.a</exclude>
+                                    </excludes>
+                                </filter>
+                                <filter>
+                                    <artifact>net.java.dev.jna:jna:jar:*</artifact>
+                                    <!-- Remove JNA binaries for unsupported platforms !-->
+                                    <excludes>
+                                        <exclude>com/sun/jna/aix-*/**</exclude>
+                                        <exclude>com/sun/jna/sunos-*/**</exclude>
+                                        <exclude>com/sun/jna/linux-ppc*/**</exclude>
+                                        <exclude>com/sun/jna/linux-mips*/**</exclude>
+                                        <exclude>com/sun/jna/openbsd-*/**</exclude>
+                                        <exclude>com/sun/jna/freebsd-*/**</exclude>
                                     </excludes>
                                 </filter>
                             </filters>
@@ -800,6 +816,7 @@
         <excludedGroups>E2E,E2E-INTRUSIVE</excludedGroups>
         <groups></groups>
         <greengrassjar.name>Greengrass</greengrassjar.name>
+        <lastVersion>2.5.0-SNAPSHOT</lastVersion>
     </properties>
     <distributionManagement>
         <snapshotRepository>
